# routers/api/orders/validation.js
@@ -5,7 +5,18 @@ const {
 } = require('../../../helpers/constants');
 
 const orderCreateSchema = Joi.object({
-  name: Joi.string().min(3).max(40).required(),
+  name: Joi.string()
+    .regex(/^[a-zA-Zа-яА-Я]+\s*((['-][a-zA-Zа-яА-Я])?[a-zA-Zа-яА-Я]*)*$/)
+    .required(),
+  phone: Joi.string()
+    .regex(/[0-9]+/)
+    .min(12)
+    .max(12)
+    .required(),
+  email: Joi.string().email().required(),
+  productType: Joi.string()
+    .valid('веб-сайт', 'дизайн', 'приложение', 'маркетинг')
+    .required(),
   comment: Joi.string().min(3).max(150).required(),
 });
 
